# flake8-tidy-imports

./: .editorconfig  .travis.yml  CHANGELOG.rst  HISTORY.rst  MANIFEST.in  README.rst  flake8_tidy_imports.py  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  test_flake8_tidy_imports.py  tox.ini
flake8_tautological_imports/: __init__.py
requirements/: py310.txt  py311.txt  py312.txt  py35.txt  py36.txt  py37.txt  py38.txt  py39.txt  requirements.in
src/: flake8_tidy_imports.py
src/flake8_tidy_imports/: __init__.py
tests/: requirements.txt  test_flake8_tidy_imports.py  test_it.py  utils.py
tests/data/: fail_a.py
tests/requirements/: py310.txt  py311.txt  py312.txt  py313.txt  py38.txt  py39.txt
