[metadata]
name = flake8-tidy-imports
version = 3.0.0
description = A flake8 plugin that helps you write tidier imports.
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/flake8-tidy-imports
project_urls =
    Changelog = https://github.com/adamchainz/flake8-tidy-imports/blob/master/HISTORY.rst
license = ISCL
keywords = flake8_tidy_imports
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
license_file = LICENSE

[options]
package_dir=
    =src
py_modules = flake8_tidy_imports
include_package_data = True
install_requires =
    flake8>=3.0,!=3.2.0,<4
    importlib-metadata ; python_version < "3.8"
python_requires = >=3.5
zip_safe = False

[options.entry_points]
flake8.extension =
    I20 = flake8_tidy_imports:ImportChecker

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E501,W503

[isort]
include_trailing_comma = True
force_grid_wrap = 0
known_first_party = apig_wsgi
line_length = 88
multi_line_output = 3
use_parentheses = True

[tool:multilint]
paths =
    setup.py
    src
    tests
